--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <header>
+        <!-- the body is what is actually displayed on a webpage-->
         <h1>Best Thing I Read</h1>
     </header>
 
