add additional note on body code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <!-- the body is what is actually displayed on a webpage-->
+        <!-- the body is divided into various sections-->
         <h1>Best Thing I Read</h1>
     </header>
 
