--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <!-- the header is meta data that doesn't display-->
+    <!-- the header is meta data about the document that doesn't display-->
     <title>Best Thing I Read</title>
 </head>
 
@@ -15,10 +15,13 @@
 
     <main>
         <p>
-            If I am completely honest, I am not much of an avid reader. I hardly ever read books but rather am much more interested in webcomics (if it wasn't already obvious from my previous lab submission).
+            If I am completely honest, I am not much of an avid reader. I hardly ever read books but rather am much more
+            interested in webcomics (if it wasn't already obvious from my previous lab submission).
         </p>
         <p>
-            That being said, I recently started a webcomic about a woman who travels back in time to seek revenge on her enemies in the past. This kind of plot line is <i>very</i> common in webcomics yet I seem to enjoy it in all of its variations. I simply find the stories to be very satisfying to read.
+            That being said, I recently started a webcomic about a woman who travels back in time to seek revenge on her
+            enemies in the past. This kind of plot line is <i>very</i> common in webcomics yet I seem to enjoy it in all
+            of its variations. I simply find the stories to be very satisfying to read.
         </p>
     </main>
 
